# solidity

./: .gitignore  CMakeLists.txt
cmake/Hunter/: config.cmake
contract/: elec.sol  signContractTest.sol
docs/: 编译器.docx
liblangutil/: Token.h
libsolidity/analysis/: SyntaxChecker.cpp
libsolidity/ast/: AST.h
libsolidity/parsing/: Parser.cpp
solc/: CMakeLists.txt  CommandLineInterface.cpp
test/cmdlineTests/standard_only_ast_requested/: output.json
test/compilationTests/MultiSigWallet/: LICENSE  MultiSigWallet.sol  TestToken.sol
test/compilationTests/corion/: LICENSE  ico.sol
test/compilationTests/gnosis/: LICENSE
test/compilationTests/gnosis/Events/: ScalarEvent.sol
test/compilationTests/gnosis/MarketMakers/: LMSRMarketMaker.sol
test/compilationTests/gnosis/Markets/: Campaign.sol  StandardMarket.sol
test/compilationTests/gnosis/Oracles/: FutarchyOracle.sol
test/compilationTests/gnosis/Tokens/: EtherToken.sol
test/compilationTests/gnosis/Utils/: Math.sol
test/compilationTests/milestonetracker/: LICENSE  RLP.sol
test/contracts/: AuctionRegistrar.cpp  FixedFeeRegistrar.cpp  Wallet.cpp
test/libevmasm/: Optimiser.cpp
test/liblll/: LLL_ERC20.cpp
test/libsolidity/: InlineAssembly.cpp  SolidityABIJSON.cpp  SolidityEndToEndTest.cpp  SolidityExpressionCompiler.cpp  SolidityOptimizer.cpp  StandardCompiler.cpp
test/libsolidity/ASTJSON/: address_payable.json  address_payable_legacy.json  array_type_name.json  array_type_name_legacy.json  function_type.json  function_type_legacy.json  long_type_name_binary_operation.json  long_type_name_binary_operation_legacy.json  long_type_name_identifier.json  long_type_name_identifier_legacy.json  modifier_definition.json  modifier_invocation_legacy.json  non_utf8.json  non_utf8_legacy.json  short_type_name.json  short_type_name_legacy.json  short_type_name_ref.json  short_type_name_ref_legacy.json  source_location.json  source_location_legacy.json
test/libsolidity/smtCheckerTests/verification_target/: constant_condition_3.sol
test/libsolidity/syntaxTests/constants/: abi_encoding_constant.sol  addmod_mulmod_rational.sol  addmod_zero.sol  assign_constant_function_value.sol  cyclic_dependency_1.sol  cyclic_dependency_2.sol  cyclic_dependency_3.sol  cyclic_dependency_4.sol  division_by_zero.sol  mod_zero.sol  mulmod_zero.sol  (+1 more)
test/libyul/: Metrics.cpp
test/tools/: afl_fuzzer.cpp  fuzzer_common.cpp
(+82 files in other folders)
